--- a/src/pug/formelements.pug
+++ b/src/pug/formelements.pug
@@ -4,12 +4,16 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
+        //- link(rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css")
+        //- link(rel="stylesheet" href="/resources/demos/style.css")
+        //- script(src="https://code.jquery.com/jquery-1.12.4.js")
+        //- script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
         title Form Elements
     body
         .formelements__container-big
             include top-logo.pug
             .formelements__container
-                .formelements-textfield__contalner
+                .formelements-textfield__container
                     h3 Text field
                     input(type="text" value="email")
                     h3 Text Field
@@ -29,42 +33,71 @@ html(lang="en")
                     input(type="email")
                 .formelements-checkbox__container
                     h3 Checkbox buttons
-                    input(type="checkbox") 
-                    p Можно курить
-                    input(type="checkbox" checked) 
-                    p Можно с питомцами
-                    input(type="checkbox" checked) 
-                    p Можно пригласить гостей (до 10 человек)
+                    label 
+                        input(type="checkbox") 
+                        span Можно курить
+                        br
+                    label
+                        input(type="checkbox" checked) 
+                        span Можно с питомцами
+                        br
+                    label
+                        input(type="checkbox" checked) 
+                        span Можно пригласить гостей (до 10 человек)
+
                     h3 Radio buttons
-                    input(type="radio" name="gender")
-                    p Мужчина
-                    input(type="radio" name="gender" checked)
-                    p Женщина
+                    label
+                        input(type="radio" name="gender")
+                        span Мужчина
+                    label
+                        input(type="radio" name="gender" checked)
+                        span Женщина
                     h3 Toggle
-                    input(type="radio")
-                    p Получать спецпредложения
-                    input(type="radio")
-                    p Получать спецпредложения
+                    label
+                        input(type="radio")
+                        span Получать спецпредложения
+                        br
+                    label
+                        input(type="radio")
+                        span Получать спецпредложения
                     h3 Like Button
-                    button 2
-                    button 12
+                    button.like-button 2
+                    button.like-button 12
+
                     h3 Rate button 
-                    //тут будут звёздочки  
+                    span.star-full
+                    span.star-full
+                    span.star-full
+                    span.star-full
+                    span.star-empty 
+
+                    span.star-full
+                    span.star-full
+                    span.star-full
+                    span.star-full
+                    span.star-full
                 .formelements-buttons__container
                     h3 Range button
-                    input(type="range")
+                    label(for="amount") Price range:
+                    input(type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;")
+                    div(id="slider-range")
+
                     h3 Buttons
                     button.button Click me
                     button.button Click me
-                    button.button Click me
-                    button.button Click me
+                    button.button.button-white Click me
+                    button.button.button-white Click me
                     button.button Click me
                     button.button Click me
                     button.button Перейти к оплате
+
                     h3 Paginaion
                     button.button 1
+                    span 2 
+                    span 3 
                     span ...
-                    button.button 15
+                    span 15
+                    button.button 
 
                     p 1 - 12 из 100+ вариантов аренды
                 .formelements-dropdown__container
@@ -74,49 +107,74 @@ html(lang="en")
                     h3 Dropdown
                     select
                         option 2 спальни, 2 кровати... 
-                .formelements-dropdown__container
+                .formelements-dropdown__container2
                     h3 Dropdown
                         select
                             option Сколько гостей
                             option 1 гость
                             option 2 гостя
                             option 3 гостя
-                .formelements-dropdown__container
+                .formelements-dropdown__container3
                     h3 Dropdown
                         select
                             option 3 гостя
                 .formelements-checkbox__container
                     h3 Expandable checkbox list
                     h3 Expandable checkbox list
-                    input(type="checkbox")
-                    label Завтрак
-                    input(type="checkbox" checked)
-                    label Письменный стол
-                    input(type="checkbox" checked)
-                    label Стул для кормления
-                    input(type="checkbox" checked)
-                    label Кроватка
-                    input(type="checkbox")
-                    label Телевизор
-                    input(type="checkbox")
-                    label Шампунь
-                    input(type="checkbox")
-                    label Телевизор
-                    input(type="checkbox")
-                    label Шампунь
+                    label   
+                        input(type="checkbox")
+                        span Завтрак 
+                        br
+                    label
+                        input(type="checkbox" checked)
+                        span Письменный стол
+                        br
+                    label
+                        input(type="checkbox" checked)
+                        span Стул для кормления
+                        br
+                    label
+                        input(type="checkbox" checked)
+                        span Кроватка
+                        br
+                    label
+                        input(type="checkbox")
+                        span Телевизор
+                        br
+                    label
+                        input(type="checkbox")
+                        span Шампунь
+                        br
+                    label
+                        input(type="checkbox")
+                        span Телевизор
+                        br
+                    label
+                        input(type="checkbox")
+                        span Шампунь
+                        
                 .formelements-rich__container
                     h3 Rich checkbox buttons
-                    input(type="checkbox")
-                    h4 Широкий коридор 
-                    input(type="checkbox")
-                    h4 Помощник для инвалидов
+                    label
+                        input(type="checkbox")
+                        h4 Широкий коридор 
+                        p Ширина коридоров в номере не менее 91 см.
+                    label
+                        input(type="checkbox")
+                        h4 Помощник для инвалидов
+                        p На 1 этаже вас встретит специалист  и проводит до номера.
                 .formelements-bullet__container
-                    input(type="radio")
-                    p Нельзя с питомцами
-                    input(type="radio")
-                    p Без вечеринок и мероприятий
-                    input(type="radio")
-                    p Время прибытия - после 13:00, а выезд до 12:00
+                    label
+                        input(type="radio")
+                        span Нельзя с питомцами
+                        br
+                    label
+                        input(type="radio")
+                        span Без вечеринок и мероприятий
+                        br
+                    label
+                        input(type="radio")
+                        span Время прибытия - после 13:00, а выезд до 12:00
                 .formelements-comfort__container
                     .formelements-comfort__smile
                         h4 Комфорт
