--- a/src/scss/button.scss
+++ b/src/scss/button.scss
@@ -9,8 +9,36 @@
     border:0;
     font-family: 'Montserrat';
     margin: 0 10px;
+    margin: 15px 10px;
 }
 
 .button:active{
+    opacity: 0.5;
+}
+
+.button-white{
+    background: #fff;
+    border: 3px solid;
+    border-image: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%) 10;
+    border-radius: 22px;
+    color: #BC9CFF;
+}
+
+.like-button{
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 10px;
+    line-height: 12px;
+    text-align: center;
+    color: #BC9CFF;
+
+    background-color: #fff;
+    border: 3px solid;
+    border-image: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%) 10;
+    border-radius: 22px;
+}
+
+.like-button:active{
     opacity: 0.5;
 }
