немного подверстала карточки

--- a/src/pug/formelements.pug
+++ b/src/pug/formelements.pug
@@ -54,11 +54,15 @@ html(lang="en")
                         span Женщина
                     h3 Toggle
                     label
-                        input(type="radio")
+                        label(class="switch")
+                            input(type="checkbox")
+                            span(class="slider round")
                         span Получать спецпредложения
                         br
                     label
-                        input(type="radio")
+                        label(class="switch")
+                            input(type="checkbox")
+                            span(class="slider round")
                         span Получать спецпредложения
                     h3 Like Button
                     button.like-button 2
