--- a/src/pug/registrationcard.pug
+++ b/src/pug/registrationcard.pug
@@ -17,4 +17,4 @@
     p Получать спецпредложения
     button.button Перейти к оплате
     p Уже есть аккаунт на Toxin 
-    button.button Войти
+    button.button-white Войти
