--- a/src/pug/roomdetails.pug
+++ b/src/pug/roomdetails.pug
@@ -28,9 +28,10 @@ html(lang="en")
                     .formelements-comfort__fire
                         h4 Уют
                         p Номер оснащён камином
-                    hr
                 .room-impression__container
                     h1 Впечатления от номера
+                    .donut
+                        span 260 голосов
                     ul 
                         li Великолепно
                         li Хорошо
