--- a/src/pug/searchroom.pug
+++ b/src/pug/searchroom.pug
@@ -17,17 +17,25 @@ html(lang="en")
                 h3 Диапазон цены
                 input(type="range")
                 h3 Checkbox buttons
-                input(type="checkbox")
-                label Можно курить
-                input(type="checkbox")
-                label Можно с питомцами
-                input(type="checkbox")
-                label Можно пригласить гостей (до 10 человек)
+                label
+                    input(type="checkbox")
+                    span Можно курить
+                br
+                label
+                    input(type="checkbox")
+                    span Можно с питомцами
+                br
+                label
+                    input(type="checkbox")
+                    span Можно пригласить гостей (до 10 человек)
                 h3 Доступность
-                input(type="checkbox")
-                label Широкий коридор
-                input(type="checkbox")
-                label Помощник для инвалидов
+                label
+                    input(type="checkbox")
+                    span Широкий коридор
+                br
+                label
+                    input(type="checkbox")
+                    span Помощник для инвалидов
                 h3 Удобства номера
                 select
                     options 2 спальни, 2 кровати
