--- a/src/pug/signincard.pug
+++ b/src/pug/signincard.pug
@@ -4,4 +4,4 @@
     input(type="password")
     button.button Войти 
     p Нет аккаунта на Toxin? 
-    button.button Создать
+    button.button-white Создать
