--- a/src/scss/cards.scss
+++ b/src/scss/cards.scss
@@ -13,16 +13,18 @@
 .calendarcard__container{
     width: 320px;
     background-color: #fff;
-    height: 300px;
+
     padding: 40px 30px 30px 30px;
-    /*высота тут пока не вставим календарь*/ 
+
 }
 
 .cards__container{
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
     align-items: flex-start;
     width: 1160px;
+    height: 1200px;
 }
 
 .registrationcard__container{
@@ -45,6 +47,11 @@
 
 .card{
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    margin: 20px;
+}
+
+.card-no-shadow{
     border-radius: 4px;
     margin: 20px;
 }
