--- a/src/pug/formelements.pug
+++ b/src/pug/formelements.pug
@@ -106,21 +106,21 @@ html(lang="en")
                     p 1 - 12 из 100+ вариантов аренды
                 .formelements-dropdown__container
                     h3 Dropdown
-                    select
+                    select.select-rooms
                         option 2 спальни, 2 кровати... 
                     h3 Dropdown
                     select
                         option 2 спальни, 2 кровати... 
                 .formelements-dropdown__container2
                     h3 Dropdown
-                        select
+                        select.select-guests
                             option Сколько гостей
                             option 1 гость
                             option 2 гостя
                             option 3 гостя
                 .formelements-dropdown__container3
                     h3 Dropdown
-                        select
+                        select.select-guests
                             option 3 гостя
                 .formelements-checkbox__container
                     h3 Expandable checkbox list
