--- a/src/scss/donut.scss
+++ b/src/scss/donut.scss
@@ -1,13 +1,95 @@
-.donut{
-    border-radius: 50%;
-}
 
-.donut span {
-    font-family: "Quicksand";
-    font-style: normal;
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 30px;
-
-    color: #BC9CFF;
-}
+.chart-text {
+    /*font: 16px/1.4em "Montserrat", Arial, sans-serif;*/
+    fill: #BC9CFF;
+    -moz-transform: translateY(0.25em);
+    -ms-transform: translateY(0.25em);
+    -webkit-transform: translateY(0.25em);
+    transform: translateY(0.25em);
+  }
+  .chart-number {
+    font-size: 0.6em;
+    line-height: 1;
+    text-anchor: middle;
+    -moz-transform: translateY(-0.25em);
+    -ms-transform: translateY(-0.25em);
+    -webkit-transform: translateY(-0.25em);
+    transform: translateY(-0.25em);
+  }
+  .chart-label {
+    font-size: 0.2em;
+    text-transform: uppercase;
+    text-anchor: middle;
+    -moz-transform: translateY(0.3em);
+    -ms-transform: translateY(0.3em);
+    -webkit-transform: translateY(0.3em);
+    transform: translateY(0.3em);
+  }
+  figure {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    margin-left: -15px;
+    margin-right: -15px;
+  }
+  @media (min-width: 768px) {
+    figure {
+      flex-direction: row;
+    }
+  }
+  .figure-content,
+  .figure-key {
+    flex: 1;
+    padding-left: 15px;
+    padding-right: 15px;
+    align-self: center;
+  }
+  .figure-content svg {
+    height: auto;
+  }
+  .figure-key {
+    min-width: calc(8 / 12);
+  }
+  .figure-key [class*="shape-"] {
+    margin-right: 6px;
+  }
+  .figure-key-list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+  .figure-key-list li {
+    margin: 0 0 8px;
+    padding: 0;
+  }
+  .shape-circle {
+    display: inline-block;
+    vertical-align: middle;
+    width: 10px;
+    height: 10px;
+    -webkit-border-radius: 50%;
+       -moz-border-radius: 50%;
+            border-radius: 50%;
+  }
+  .shape-fuschia {
+    background-color: #FFE39C;
+  }
+  .shape-lemon-lime {
+    background-color: #6FCF97;
+  }
+  .shape-blue {
+    background-color: #BC9CFF;
+  }
+  .bad {
+    background-color: #919191;
+  }
+  .sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0,0,0,0);
+    border: 0;
+  }
