начала довёрстывать ui kit

--- a/src/pug/cards.pug
+++ b/src/pug/cards.pug
@@ -5,7 +5,9 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         title Cards
-    body   
+    body  
+        div.headerlogo__container
+            include top-logo.pug 
         .cards__container
             include findnumbercard.pug
             include registrationcard.pug
