--- a/src/pug/footer.pug
+++ b/src/pug/footer.pug
@@ -30,7 +30,8 @@
         .main-footer__subscribe
             b.main-footer__subscribe-bold Subscribe to our newsletter
             p.main-footer__subscribe-paragraph  Receive our latest news and promotions in your inbox!
-            input(type="email")
+            .main-footer__input-container
+                input(type="email" placeholder="Your email address").main-footer__input
     hr
     .main-footer__copyright-container
         p.main-footer__copyright-text Copyright © 2018 Toxin UI Kit. All rights reserved.
