--- a/src/pug/headersfooters.pug
+++ b/src/pug/headersfooters.pug
@@ -6,6 +6,8 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         title Headers and Footers
     body
+        div.headerlogo__container
+            include top-logo.pug
         div.header__container
             include header-login.pug
         div.header__container
