--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,6 @@
 @import "header.scss";
 @import "button.scss";
 @import "fonts.scss";
-@import "footer.scss";
 @import "footer-creative.scss";
 @import "colorsntype.scss";
 @import "formelements.scss";
@@ -14,6 +13,8 @@
 @import "datepicker.scss";
 @import "~normalize.css";
 @import "donut.scss";
+@import "headersfooters.scss";
+@import "footer.scss";
 
 
 
