--- a/src/scss/button.scss
+++ b/src/scss/button.scss
@@ -17,11 +17,17 @@
 }
 
 .button-white{
-    background: #fff;
-    border: 3px solid;
-    border-image: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%) 10;
     border-radius: 22px;
+    padding: 15px 20px;
     color: #BC9CFF;
+    font-size: 12px;
+    font-weight: bold;
+    box-shadow: 0 0 6px 0 rgba(157, 96, 212, 0.5);
+    border: solid 2px transparent;
+    background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+    background-origin: border-box;
+    background-clip: content-box, border-box;
+    box-shadow: 2px 1000px 1px #fff inset;
 }
 
 .like-button{
@@ -41,4 +47,38 @@
 
 .like-button:active{
     opacity: 0.5;
+}
+
+.main-login-list__login{
+    padding: 10px 20px;
+    border: 1px solid #BC9CFF;
+    background-color: #fff;
+    color: #BC9CFF;
+}
+
+.main-login-list__register{
+    padding: 10px 20px;
+    font-weight: bold;
+}
+
+.pay-button{
+    width: 320px;
+}
+
+.disabled-button{
+    opacity: 0.5;
+}
+
+.button-text{
+    border: none;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 15px;
+    color: #BC9CFF;
+    background-color: #fff;
+    text-transform: uppercase;
+}
+
+.button-disabled-text{
+    color: rgba(31, 32, 65, 0.5);
 }
