--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -11,6 +11,7 @@
     line-height: 24px;
     justify-content: space-between;
     width: 1160px;
+    margin-bottom: 100px;
 }
 .main-footer__text{
     margin:0;
@@ -76,6 +77,7 @@
     padding: 0 140px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     background-color: #fff;
     width: 1160px;
 }
@@ -109,4 +111,29 @@
 
 .main-footer__socials-link.ig::before{
     background: url("../img/ig.png") 0 0 no-repeat;
+}
+
+.main-footer__container-big .main-footer__input{
+    padding: 0px 15px;
+    text-transform: none;
+    border-radius: 5px;
+    width: 230px;
+    color: rgba(31, 32, 65, 0.25);
+}
+
+.main-footer__input-container{
+    position: relative;
+}
+
+.main-footer__input-container::after{
+    position: absolute;
+    content: "";
+
+    width: 20px;
+    height: 20px;
+
+    top: 15px;
+    right: 10px;
+ 
+    background: url("../img/arrow_forward.svg") no-repeat;
 }
