--- a/src/scss/formelements.scss
+++ b/src/scss/formelements.scss
@@ -2,7 +2,6 @@
 
 .formelements__container{
     display: flex;
-    margin-top: 70px;
     flex-wrap: wrap;
     justify-content: space-between;
 }
@@ -10,9 +9,28 @@
 .formelements__container-big{
     background-color: #fff;
     width: 1160px;
-    padding: 30px 30px 132px 140px;
+    padding: 65px 140px 132px 140px;
 }
 
+.formelements__logo-container{
+    background-color: #fff;
+    padding-left: 30px;
+    padding-top: 30px;
+    width: 1410px;
+    margin: auto;
+}
+
+.formelements-textfield__input{
+    margin-bottom: 20px;
+}
+
+select{
+    width: 320px;
+    height: 44px;
+    color: rgba(31, 32, 65, 0.75);
+    border: 1px solid rgba(31, 32, 65, 0.25);
+    border-radius: 4px;
+}
 
 input[type="text"]{
     width: 320px;
@@ -21,7 +39,8 @@ input[type="text"]{
     font-family: 'Montserrat';
     font-size: 14px;
     line-height: 18px;
-    color: rgba(31, 32, 65, 0.25);
+    color: rgba(31, 32, 65, 0.25);  
+    border-radius: 4px;
 }
 
 input[type="date"]{
@@ -35,10 +54,11 @@ input[type="date"]{
     line-height: 24px;
     color: rgba(31, 32, 65, 0.25);
     text-transform: uppercase;  
+    border-radius: 4px;
 }
 
 input[type="email"]{
-    width: 320px;
+    width: 241px;
     height: 44px;
     border: 1px solid rgba(31, 32, 65, 0.25);
     font-family: 'Montserrat';
@@ -47,8 +67,29 @@ input[type="email"]{
     font-size: 14px;
     line-height: 24px;
     color: rgba(31, 32, 65, 0.25);
-    text-transform: uppercase;  
+    text-transform: uppercase; 
+    padding: 13px;
+    border-radius: 4px;
 }
+
+.formelements-checkbox__container h3{
+    margin-bottom: 16px;
+}
+
+//прячем чекбокс
+input[type="checkbox"]{
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+
+.formelements-checkbox__check{
+    margin-left: 30px;
+    margin-bottom: 13px;
+}
+
 
 .select-guests{
     width: 320px;
@@ -177,9 +218,6 @@ input[type="password"]{
     color: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
 }
 
-input[type="range"]{
-    width: 266px;
-}
 
 .formelements-textfield__container{
     margin-right: 120px;
@@ -200,22 +238,23 @@ input[type="range"]{
     margin-right: 70px;
 }
 
+//круглый чекбокс
 .switch {
     position: relative;
     display: inline-block;
     width: 60px;
     height: 34px;
-  }
-  
-  /* Hide default HTML checkbox */
-  .switch input {
+}
+
+/* Hide default HTML checkbox */
+.switch input {
     opacity: 0;
     width: 0;
     height: 0;
-  }
-  
-  /* The slider */
-  .slider {
+}
+
+/* The slider */
+.slider {
     position: absolute;
     cursor: pointer;
     top: 0;
@@ -225,9 +264,9 @@ input[type="range"]{
     background-color: #ccc;
     -webkit-transition: .4s;
     transition: .4s;
-  }
+}
   
-  .slider:before {
+.slider:before {
     position: absolute;
     content: "";
     height: 26px;
@@ -237,7 +276,7 @@ input[type="range"]{
     background-color: white;
     -webkit-transition: .4s;
     transition: .4s;
-  }
+}
   
   input:checked + .slider {
     background-color: #2196F3;
