--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -20,20 +20,64 @@
     flex-wrap: wrap;
 }
 
-
 .main-nav-list{
     display: flex;
     flex-direction: row;
     list-style: none;
     align-items: center;
+    margin: 0;
 }
 
 .main-nav-list__item{
     margin: 0 15px;
 }
 
+.main-nav-list__item:nth-child(1){
+    font-weight: bold;
+}
+
+.main-nav-list__item:nth-child(3){
+    position: relative;
+    margin-right: 20px;
+}
+
+.main-nav-list__item:nth-child(3)::after{
+    position: absolute;
+    content: "";
+
+    width: 7px;
+    height: 7px;
+
+    top: 5px;
+    right: -15px;
+
+    border: 1px solid rgba(31, 32, 65, 0.5);;
+    transform: rotate(-45deg);
+    border-width: 0px 0px 2px 2px;
+
+}
+
 .main-login-list{
     display: flex;
     flex-direction: row;
     list-style: none;
+    margin: 0px;
+}
+
+.main-nav p{
+    position: relative;
+    margin-left: 30px;
+}
+
+.main-nav p::before{
+    position: absolute;
+    content: "";
+
+    top: 0;
+    left: -20px;
+
+    width: 1px;
+    height: 30px;
+
+    background: rgba(31, 32, 65, 0.1);
 }
